--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,3 +43,5 @@ services:
       CONNECT_KEY_CONVERTER_SCHEMAS_ENABLE: "false"
       CONNECT_VALUE_CONVERTER_SCHEMAS_ENABLE: "false"
       CONNECT_REST_ADVERTISED_HOST_NAME: "kafka-connect"
+    volumes:
+      - /var/log:/var/log
